cabal-version:      3.0
name:               lonpos
version:            0.1.0.0
synopsis:           A solver for the lonpos 100+ puzzles.
description:
homepage:           https://github.com/MarcFontaine/lonpos
license:            BSD-3-Clause
license-file:       LICENSE
author:             Marc Fontaine
maintainer:         Marc.Fontaine@gmx.de
category:           Game
build-type:         Simple
extra-doc-files:    README
common warnings
    ghc-options: -Wall
 -- -Werror
library
    import:           warnings
    exposed-modules:
        Lonpos.BoardToHtml
        Lonpos.SolveSBV
        Lonpos.Test
        Lonpos.Types
    build-depends:
        base ^>=4.18.2.1,
        array,
        filepath,
        sbv >= 10.12,
        blaze-markup,
        blaze-html,
        blaze-svg,
    hs-source-dirs:   src
    default-language: GHC2021

executable lonpos
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.2.1,
        lonpos
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite lonpos-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.2.1,
        lonpos
